fixing my swagger.json file
