# routes/index.js
@@ -1,13 +1,20 @@
 const router = require('express').Router();
 
 router.get('/', (req, res) => {
-    //#swagger.tags = ['Hello World']
     res.send('Hello World!')
 });
 
-router.use('/api-docs', require('./swagger'));
-router.use('/chapels', require('./chapels'));
-router.use('/prophets', require('./prophets'));
+router.use('/api-docs',
+    require('./swagger')
+);
+
+router.use('/chapels',
+    require('./chapels')
+);
+
+router.use('/prophets',
+    require('./prophets')
+);
 
 
 
