# routes/prophets.js
@@ -9,7 +9,6 @@ function handleError(res, error) {
 }
 
 router.get('/', async (req, res) => {
-    //#swagger.tags = ['Get All Prophets']
     try {
         await prophetsController.getAll(req, res);
     } catch (error) {
@@ -18,7 +17,6 @@ router.get('/', async (req, res) => {
 });
 
 router.get('/:id', async (req, res) => {
-    //#swagger.tags = ['Get one Prophet by ID']
     try {
         await prophetsController.getSingle(req, res);
     } catch (error) {
@@ -27,7 +25,6 @@ router.get('/:id', async (req, res) => {
 });
 
 router.post('/', async (req, res) => {
-    //#swagger.tags = ['Post New Prophet']
     try {
         await prophetsController.createProphets(req, res);
     } catch (error) {
@@ -36,7 +33,6 @@ router.post('/', async (req, res) => {
 });
 
 router.put('/:id', async (req, res) => {
-    //#swagger.tags = ['Update Prophet']
     try {
         await prophetsController.updateProphets(req, res);
     } catch (error) {
@@ -45,7 +41,6 @@ router.put('/:id', async (req, res) => {
 });
 
 router.delete('/:id', async (req, res) => {
-    //#swagger.tags = ['Delete one Prophet']
     try {
         await prophetsController.deleteProphets(req, res);
     } catch (error) {
